@@ -1,2 +1,3 @@
 etag-version		: 1
 secret              : total.js test
+array     (Array)   : [1, 2, 3, 4]
